ingress-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-python-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: devops-app.example.com   # Replace with your DNS name or external IP
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-python-service   # Your Service name
            port:
              number: 8000
